# transcription-player

./: .gitignore  Cargo.toml  Readme.md
rubberband-rs/: Cargo.toml  build.rs
rubberband-rs/src/: bindings.rs  lib.rs  wrapper.h
transcription-player-gui/: Cargo.toml  build.rs
transcription-player-gui/blueprints/: window.blp
transcription-player-gui/resources/: ninja.seppli.Transcrible.gschema.xml  resources.gresource.xml  window.ui
transcription-player-gui/src/: audio.rs  main.rs
transcription-player-gui/src/ui/: main_window.rs  timeline.rs  window.rs
